--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,21 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 outputs/ 
+__pycache__/ 
+*.pyc 
+*.pyo 
+*.pyd 
+venv/ 
+env/ 
+.titanic_env/ 
+*.egg-info/ 
+.ipynb_checkpoints/ 
+outputs/ 
+*.csv 
+models/*.pkl 
+.vscode/ 
+.idea/ 
+*.swp 
+*.log 
+.DS_Store 
+Thumbs.db 
